--- a/be-springboot-onlineshop/src/main/resources/application.properties
+++ b/be-springboot-onlineshop/src/main/resources/application.properties
@@ -1,11 +1,24 @@
 spring.application.name=be-springboot-onlineshop
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_online_shop
-spring.datasource.username=postgres
-spring.datasource.password=admin
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.datasource.url=jdbc:postgresql://localhost:5432/db_online_shop
+# spring.datasource.username=postgres
+# spring.datasource.password=admin
+
+# spring.application.name=onlineshop
+
+spring.datasource.url=jdbc:mysql://localhost:3306/db_store
+spring.datasource.username=root
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+pring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+server.port=8080
+
+# application.minio.url=http://127.0.0.1:9000
+# application.minio.username=minioadmin
+# application.minio.password=minioadmin
+# application.minio.bucketName=rindu
