Update get PIC with URL and Update PIC and POST with File

--- a/be-springboot-onlineshop/src/main/resources/application.properties
+++ b/be-springboot-onlineshop/src/main/resources/application.properties
@@ -18,6 +18,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 server.port=8080
 
+application.minio.url=http://127.0.0.1:9000
+application.minio.username=minioadmin
+application.minio.password=minioadmin
+application.minio.bucketName=gentra
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+
 # application.minio.url=http://127.0.0.1:9000
 # application.minio.username=minioadmin
 # application.minio.password=minioadmin
