--- a/be-springboot-onlineshop/pom.xml
+++ b/be-springboot-onlineshop/pom.xml
@@ -56,6 +56,11 @@
 			<artifactId>jasperreports</artifactId>
 			<version>6.21.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>8.4.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
