Update Pagination Get Customer, Get Report Order.PDF With Jasper, Trying Integrasi Customer Get all and Get By Id

--- a/be-springboot-onlineshop/src/main/resources/application.properties
+++ b/be-springboot-onlineshop/src/main/resources/application.properties
@@ -26,6 +26,8 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
+report.output.path=F:\\PEKERJAAN\\BTPN-Gentra\\Download
+
 # application.minio.url=http://127.0.0.1:9000
 # application.minio.username=minioadmin
 # application.minio.password=minioadmin
