--- a/be-springboot-onlineshop/src/main/resources/application.properties
+++ b/be-springboot-onlineshop/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_store
 spring.datasource.username=root
 spring.datasource.password=
 
+# spring.datasource.url=jdbc:mysql://localhost:3306/db_store?serverTimezone=Asia/Jakarta
+# spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Jakarta
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
