--- a/be-springboot-onlineshop/src/main/resources/application.properties
+++ b/be-springboot-onlineshop/src/main/resources/application.properties
@@ -21,4 +21,4 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
-report.output.path=F:\\PEKERJAAN\\BTPN-Gentra\\Download
+report.output.path=F:\\PEKERJAAN\\SpringBoot-Angular-Onlineshop-Gentra\\Download
